manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-ingress
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    external-dns.alpha.kubernetes.io/hostname: ${DNS_NAME}
    cert-manager.io/cluster-issuer: tensure-issuer
spec:
  ingressClassName: gce
  rules:
  - host: ${DNS_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE_NAME}
            port:
              number: 80
  tls:
  - hosts:
    - ${DNS_NAME}
    secretName: ${SECRET_NAME}
